make it compile with java 8 - does still not run since materialfx uses features not included in javafx8